# lib_layer_renderer

./: .gitignore  CMakeLists.txt  README.md
NonRigidReconstruction/: CMakeLists.txt  main.cpp  view_result.cpp
NonRigidReconstruction/src/: cost_function.cpp  cost_function.h  embedded_deformation.cpp  embedded_deformation.h  logger.h  pcl_viewer.h  point_cloud_define.h  point_cloud_handler.cpp  point_cloud_handler.h  scene_reconstructor.cpp  scene_reconstructor.h  util.cpp  util.h
NonRigidReconstruction/src/sgm/: dm_util.cpp  dm_util.h  sgm.cpp  sgm.h
cmake/: lib_layer_rendererConfig.cmake.in
examples/: CMakeLists.txt  lib_layer_renderer_example.cpp  lib_layer_renderer_examples.cpp  lib_layer_renderer_examples_multiview.cpp  lib_layer_renderer_multiview_example.cpp
export/: lib_layer_renderer.h
export/lib_layer_renderer/: layer.h  layer_background.h  layer_background3d.h  layer_circle.h  layer_cone.h  layer_coordinate.h  layer_cylinder.h  layer_gripper.h  layer_model.h  layer_renderer.h  layer_segment.h  layer_sphere.h  layer_texture3d.h  layer_util.h
include/: layer.h  layer_background.h  layer_circle.h  layer_cone.h  layer_coordinate.h  layer_cylinder.h  layer_gripper.h  layer_model.h  layer_model_base.h  layer_renderer.h  layer_segment.h  layer_texture3d.h  layer_util.h  lib_layer_renderer.h
include/lib_layer_renderer/: layer.h  layer_background.h  layer_background3d.h  layer_circle.h  layer_cone.h  layer_endeffector.h  layer_gripper.h  layer_renderer.h  layer_sphere.h  layer_texture3d.h
models/: bgf_0.STL  bgf_1.STL  nh_0.STL  nh_0_simplified.STL  nh_1.STL  nh_1_simplified.STL  tgf_0.STL  tgf_1.STL  tgf_2.STL
shaders/: model.fs  model.vs  model_ignore.fs  model_ignore.vs  texture.fs  texture.vs  texture3d.vs  texture_3d.fs  texture_3d.vs
src/: assertm.h  layer.cpp  layer_background.cpp  layer_background3d.cpp  layer_circle.cpp  layer_cone.cpp  layer_coordinate.cpp  layer_cylinder.cpp  layer_define.h  layer_endeffector.cpp  layer_gripper.cpp  layer_model.cpp  layer_model_base.cpp  layer_renderer.cpp  layer_segment.cpp  layer_sphere.cpp  layer_texture3d.cpp  layer_texture3d.h  stl_reader.cpp  stl_reader.h
src/sgm/: dm_util.cpp  dm_util.h  sgm.cpp  sgm.h
src/shapes/: arrow_generator.cpp  arrow_generator.h  circle_generator.cpp  circle_generator.h  cone_generator.cpp  cone_generator.h  cylinder_generator.cpp  cylinder_generator.h  generator_base.cpp  generator_base.h  generator_util.h  segment_generator.cpp  segment_generator.h  sphere_generator.cpp  sphere_generator.h  util_generator.h
test/: CMakeLists.txt  lib_layer_renderer_line_pair.cpp  lib_layer_renderer_sr_test.cpp  lib_layer_renderer_test.cpp  lib_layer_renderer_test_multiview.cpp  test_lib_layer_renderer.cpp  test_lib_layer_renderer_multiview.cpp  test_run.cpp  test_run_gripper.cpp  test_run_texture3d.cpp
